[package]
name = "qrap-core"
version = "0.1.0"
edition = "2021"
authors = ["TOTAL Protocol Team"]
description = "Quantum-Resistant Anchor Protocol - Core Implementation"
license = "MIT"

[dependencies]
sha3 = "0.10"
blake3 = "1.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "utxo_benchmark"
harness = false
