
import os

base_dir = "/mnt/agents/output/qrap-core"

# Упрощаем Cargo.toml — убираем env-filter, используем базовый tracing
simple_cargo = """[package]
name = "qrap-core"
version = "0.1.0"
edition = "2021"
authors = ["TOTAL Protocol Team"]
description = "Quantum-Resistant Anchor Protocol - Core Implementation"
license = "MIT"

[dependencies]
sha3 = "0.10"
blake3 = "1.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "utxo_benchmark"
harness = false
path = "benches/utxo_benchmark.rs"
"""

with open(os.path.join(base_dir, "Cargo.toml"), "w") as f:
    f.write(simple_cargo)

print("✅ Cargo.toml упрощён — убран env-filter из tracing-subscriber")

# Также упрощаем main.rs — убираем сложный env-filter
with open(os.path.join(base_dir, "src/main.rs"), "r") as f:
    main_content = f.read()

# Заменяем сложную инициализацию tracing на простую
simple_main = main_content.replace(
    '''tracing_subscriber::fmt()
        .with_env_filter(tracing_subscriber::EnvFilter::from_default_env()
            .add_directive("qrap_core=info".parse()?))
        .init();''',
    '''tracing_subscriber::fmt::init();'''
)

with open(os.path.join(base_dir, "src/main.rs"), "w") as f:
    f.write(simple_main)

print("✅ main.rs упрощён — базовая инициализация tracing")

# Создаём архив
import subprocess
import time

archive_path = "/mnt/agents/output/qrap-core-v0.1.1-simple.tar.gz"
if os.path.exists(archive_path):
    os.remove(archive_path)

time.sleep(0.5)

subprocess.run([
    "tar", "-czf", archive_path,
    "-C", "/mnt/agents/output",
    "qrap-core"
], check=True)

size = os.path.getsize(archive_path)
print(f"\n✅ Архив: {archive_path}")
print(f"Размер: {size} bytes ({size/1024:.1f} KB)")
